--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
   <body>
     <div class="wrapper" style="float:left; margin:0;">
       <header>
-        <h1><a href="https:link.to.paper">{{ site.title | default: site.github.repository_name }}</a></h1>
+        <h1><a href="https:link..to.paper">{{ site.title | default: site.github.repository_name }}</a></h1>
 
         {% if site.logo %}
           <img src="{{site.logo | relative_url}}" alt="Logo" />
