--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
     <![endif]-->
   </head>
   <body>
-    <div class="wrapper" style="float:left; margin:0;">
+    <div class="background" style="float:left; margin:0;">
       <header>
         <h1><a href="https:link..to.paper">{{ site.title | default: site.github.repository_name }}</a></h1>
 
