--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,14 +13,14 @@
   </head>
   <body>
     <div class="background" style="float:left; margin:0;">
-      <header>
+      <!-- <header>
         <h1><a href="https:link..to.paper">{{ site.title | default: site.github.repository_name }}</a></h1>
 
         {% if site.logo %}
           <img src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
 
-        <!-- <p>{{ site.description | default: site.github.project_tagline }}</p> -->
+
         <p>{{ default: site.github.project_tagline }}</p>
 
         {% if site.github.is_project_page %}
@@ -38,7 +38,7 @@
           <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
         </ul>
         {% endif %}
-      </header>
+      </header> -->
       <section style="width: 500px; height: 300px;">
 <!--    <div class="foo" >-->
 
@@ -46,13 +46,12 @@
 
       </section>
 <!--      </div>-->
-      <footer>
+      <!-- <footer>
         {% if site.github.is_project_page %}
         <p>Please use Mozilla Firefox or Google Chrome.</p>
         <p>This project is maintained by <a href="https://m-marco.com">{{ "Marco Martínez" }}</a>.</p>
         {% endif %}
-<!--        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>-->
-      </footer>
+      </footer> -->
     </div>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
     {% if site.google_analytics %}
